# gluplot

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.koi  configure  configure.in  gluplot.lsm  gluplot.spec
docs/: Makefile.am  Makefile.in  man.tex
docs/html/: Makefile.am  Makefile.in  class_diagram.xmi  index.html  index.sgml
src/: Makefile.am  Makefile.in  getopt.c  gui.cpp  gui.fl  gui.h  main.cpp  usage.cpp  usage.h
src/gl2ps/: Makefile.am  Makefile.in
src/icon/: Makefile.am  Makefile.in  gluplot.desktop  gluplot.rc  gluplot.xbm  gluplot.xpm
src/plot/: Makefile.am  Makefile.in  glp_axis.cpp  glp_axis.h  glp_bundle.cpp  glp_bundle.h  glp_color.cpp  glp_color.h  glp_curve.cpp  glp_curve.h  glp_fltk_window.cpp  glp_fltk_window.h  glp_glut_window.cpp  glp_glut_window.h  glp_label.cpp  glp_label.h  glp_option.cpp  glp_option.h  glp_plot.cpp  glp_plot.h  glp_plot_gl.cpp  glp_point.cpp  glp_point.h  glp_style.h  glp_surface.cpp  glp_surface.h  glp_window.cpp  glp_window.h  gluplot.h
src/test/: Makefile.am  Makefile.in  data_file.cpp  dubna_sh.ppm  parzen_1D.cpp  parzen_2D.cpp  ppm.c  ppm.h  rainbow.cpp  sphere.cpp  surface.cpp  terrain.cpp  test.fit
vc/3rd/lib/: fltk.lib  fltkforms.lib  fltkgl.lib  fltkimages.lib  fltkjpeg.lib  fltkpng.lib  fltkz.lib
vc/gluplot/: gluplot.sln
vc/gluplot/gluplot/: gluplot.vcproj
vc/gluplot/gluplot.lib/: gluplot.lib.vcproj
vc/gluplot/test/: test.vcproj
vc/gluplot/test/parzen_1D/: parzen_1D.vcproj
vc/gluplot/test/parzen_2D/: parzen_2D.vcproj
vc/gluplot/test/sphere/: sphere.vcproj
vc/gluplot/test/surface/: surface.vcproj
