
EXTRA_DIST = \
index.sgml index.html \
class_diagram.xmi class_diagram.png \
data_file.png surface.png \
gui.png \
rainbow.png sphere.png \
parzen_1D.png parzen_2D.png \
loading.png freezeout.png 


install-data-local:
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/index.sgml $(docdir)/index.sgml
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/index.html $(docdir)/index.html
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/class_diagram.xmi $(docdir)/class_diagram.xmi
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/class_diagram.png $(docdir)/class_diagram.png
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/data_file.png $(docdir)/data_file.png
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/surface.png $(docdir)/surface.png
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/gui.png $(docdir)/gui.png
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/rainbow.png $(docdir)/rainbow.png
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/sphere.png $(docdir)/sphere.png
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/parzen_1D.png $(docdir)/parzen_1D.png
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/parzen_2D.png $(docdir)/parzen_2D.png
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/loading.png $(docdir)/loading.png
	$(mkinstalldirs) $(docdir)
	$(INSTALL_DATA) $(srcdir)/freezeout.png $(docdir)/freezeout.png

uninstall-local:
	-rm -f $(docdir)/index.sgml
	-rm -f $(docdir)/index.html
	-rm -f $(docdir)/class_diagram.xmi
	-rm -f $(docdir)/class_diagram.png
	-rm -f $(docdir)/data_file.png
	-rm -f $(docdir)/surface.png
	-rm -f $(docdir)/gui.png
	-rm -f $(docdir)/rainbow.png
	-rm -f $(docdir)/sphere.png
	-rm -f $(docdir)/parzen_1D.png
	-rm -f $(docdir)/parzen_2D.png
	-rm -f $(docdir)/loading.png
	-rm -f $(docdir)/freezeout.png

